# Manipulation-et-traitement-de-pieces-3D

./: LICENSE  README.md
exemples/: CMakeLists.txt  calcul_points.py  class_test.cpp  class_test.hpp  colored_objets.py  count_objects.cpp
exemples_CGAL/Triangulated_Surface_Mesh_Segmentation/: CMakeLists.txt  SurfaceMeshSegmentation.cpp  SurfaceMeshSegmentation.hpp  mesh_segmentation.py
exemples_CGAL/Triangulated_Surface_Mesh_Simplification/: CMakeLists.txt  README.md  SurfaceMesh.cpp  SurfaceMesh.hpp  SurfaceMeshSimplification.cpp  SurfaceMeshSimplification.hpp  triangulated_surface_mesh_simplification.py
exemples_CGAL/Triangulated_Surface_Mesh_Simplification_With_Data_Serialization/: README.md  SurfaceMesh.cpp  SurfaceMesh.hpp  triangulated_surface_mesh_simplification.py
